Mon Apr  4 14:32:34 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee/abstractsession.rb, lib/wee/session.rb,
	  lib/wee/pageless/session.rb, examples/live-update.rb: refactored
	  Session classes.

	* lib/wee/core/presenter.rb: added send_response method, to send a
	  premature response.

Mon Apr  4 13:03:08 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee/pageless/session.rb, lib/wee/pageless/application.rb: Remove
	  dependency of WEBrick::Cookie, use CGI::Cookie instead.

	* lib/wee/adaptors/fastcgi.rb: Added preliminary FastCGI adaptor
	  (does not work yet with Pageless applications).

	* lib/wee/adaptors/webrick.rb: reordered line

Sun Apr  3 13:24:04 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee/adaptors/webrick.rb: doc fix

Sun Apr  3 13:11:07 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee/core/presenter.rb, lib/wee/core/component.rb, 
	  lib/wee/core/decoration.rb, lib/wee/session.rb, 
	  lib/wee/pageless/session.rb, examples/window.rb, README:
	  Fixed a bug in processing the callbacks. It was not guaranteed that
	  all input callbacks are invoked before the final action callback.
	  This is now guaranteed! I've introduced two separate tree traversals
	  of process_callbacks to make this work. As a side effect, this also
	  has removed the dependency of Presenter/Component/Decoration classes
	  from the CallbackStream class. Instead of a CallbackStream, a code
	  block is now passed through the
	  process_callbacks/process_callbacks_chain traversal. The Session
	  class specifies how to invoke the callbacks.

Thu Mar  3 12:31:15 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* wee/session.rb, wee/pageless/session.rb: new methods 
	  pre_respond_hook, post_callbacks_hook, especially to make pretty-URLs
	  as suggested by Joao Pedrosa working.

Thu Mar  3 12:11:05 CET 2005	Michael Neumann <mneumann@ntecs.de>

	* wee/response.rb (Wee::Response): Use the passed mime_type as
	  content-type (bug fix).
